src/content-handlers/iiif/modules/uv-openseadragoncenterpanel-module/css/styles.less
@import "mobile";

.uv-iiif-extension-host.uv-openseadragon-extension {
  @search-result: @brand-secondary;

  .centerPanel {
    background-color: transparent;

    .controlsContainer {
      position: absolute;
      left: @panel-margin;
      z-index: 100;
      display: none;
      flex-direction: column;
      align-items: flex-start;
      pointer-events: auto;

      .md-mediaquery({
          display: flex;
        });
    }

    .pagingToggleButtons {
      position: absolute;
      bottom: 112px;
      left: 10px;
      z-index: 1000;
      display: flex;
      background: rgb(0 0 0 / 70%);
      transition: opacity 0.3s ease;

      .sm-mediaquery({
          display: none;
        });

      button {
        cursor: pointer;

        svg {
          width: 30px;
          height: 30px;
          fill: currentcolor;
          transition: fill 0.2s ease;
        }

        &:hover {
          color: #00fff2;
        }

        &:focus {
          .tab-focus();
        }
      }

      &.fade-out {
        opacity: 0 !important;
      }
    }

    .content {
      position: relative;

      .paging.btn {
        position: absolute;
        width: 30px;
        height: 90px;
        background-repeat: no-repeat;
        background-color: rgb(0 0 0 / 70%);
        background-position: 0 50%;
        cursor: pointer;
        padding: 0;
        border: none;
        top: 50%;
        transform: translateY(-50%);
        z-index: 101;
        pointer-events: auto;

        &.vertical {
          height: 30px;
          width: 90px;
          background-position: 50% 0;
        }

        &.prev {
          background-image: data-uri("../img/left_arrow.png");
          left: 10px;
          &.disabled {
            background-image: data-uri("../img/left_arrow_disabled.png");
            opacity: 0.5;
            cursor: not-allowed;
          }
        }

        &.prev.vertical {
          background-image: data-uri("../img/up_arrow.png");
          left: 50%;
          top: 10px;
          transform: translateX(-50%);
          &.disabled {
            background-image: data-uri("../img/up_arrow_disabled.png");
            opacity: 0.5;
            cursor: not-allowed;
          }
          &.down {
            background-image: data-uri("../img/down_arrow.png");
            &.disabled {
              background-image: data-uri("../img/down_arrow_disabled.png");
            }
          }
        }

        &.next {
          background-image: data-uri("../img/right_arrow.png");
          right: 10px;
          &.disabled {
            background-image: data-uri("../img/right_arrow_disabled.png");
            opacity: 0.5;
            cursor: not-allowed;
          }

          & .uv-icon-next {
            background-image: none;
          }
        }

        &.next.vertical {
          background-image: data-uri("../img/down_arrow.png");
          left: 50%;
          bottom: 10px;
          top: auto;
          transform: translateX(-50%);
          margin-left: 0;
          &.disabled {
            background-image: data-uri("../img/down_arrow_disabled.png");
            opacity: 0.5;
            cursor: not-allowed;
          }
          &.up {
            background-image: data-uri("../img/up_arrow.png");
            &.disabled {
              background-image: data-uri("../img/up_arrow_disabled.png");
            }
          }
        }
      }

      .imageControlButton {
        background-color: #212121;
        color: white;
        width: 30px;
        height: 30px;

        display: inline-flex;
        align-items: center;
        justify-content: center;
        cursor: pointer !important;

        svg {
          display: block;
          width: 30px;
          height: 30px;
        }

        &:hover {
          color: #00fff2;
        }

        &:focus {
          .tab-focus();
        }
      }

      .goHome {
        // hide temporarily
        display: none;
        align-items: center;
        justify-content: center;
        cursor: pointer !important;
        background-image: data-uri("../img/home.png") !important;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;

        img {
          display: none;
        }

        &:focus {
          .tab-focus();
        }
      }

      #osd-navigator-container {
        position: absolute !important;
        bottom: 0;
        left: 10px;
        width: 100px;
        height: 100px;
        border: 2px solid rgb(85 85 85);
        background-color: black;
      }

      // ui fading
      .controlsContainer,
      .pagingToggleButtons,
      .gallery,
      #osd-navigator-container,
      .paging.prev,
      .paging.next {
        transition: opacity 0.25s ease-in-out;
        opacity: 1;
      }

      .controlsContainer.fade-out,
      .pagingToggleButtons.fade-out,
      .gallery.fade-out,
      #osd-navigator-container.fade-out,
      .paging.prev.fade-out,
      .paging.next.fade-out {
        opacity: 0 !important;
      }
    }
  }
}

